Added directory suffix @gwu.edu

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,8 @@ en:
       related_url:       "Related URL"
       rights:            "Content License"
       files:             "Upload Files"
+    directory:
+      suffix:            "@gwu.edu"
     search:
       form:
         q:
