--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,4 +44,7 @@ en:
         q:
           label:        "Search Collections"
           placeholder:  "Type search here..."
+        option:
+          all:
+            label_long:   "All of GW Scholarship"
     background_attribution: "Background image courtesy of George Washington University"
