Configured deposit agreement name. Fixes #134.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,3 +48,4 @@ en:
           all:
             label_long:   "All of GW ScholarSpace"
     background_attribution: "Background image courtesy of The George Washington University"
+    deposit_agreement:  "GW ScholarSpace's Deposit Agreement"
